--- a/ORG/Irodalom/README.org
+++ b/ORG/Irodalom/README.org
@@ -1,21 +1,21 @@
 * Irodalom tételek
-- [[1_tetel_Ady_Endre_Leda_tetel.org][1. tetel_Ady_Endre_Leda_tetel.org]]
-- [[2_Arany_Janos_Balladakolteszete.org][2. - Arany_Janos_Balladakolteszete.org]]
-- [[3_Babits_Profetai_Kuldetestudat.org][3. - Babits_Profetai_Kuldetestudat.org]]
-- [[4_Herczeg_Ferenc_kisepika.org][4. Herczeg_Ferenc_kisepika.org]]
-- [[5_Jokai_romantika_realizmus.org][5. Jokai_romantika_realizmus.org]]
-- [[6_Jozsef_Attila_szerelmi_kolteszete.org][6. - Jozsef_Attila_szerelmi_kolteszete.org]]
-- [[7_Kosztolanyi_prozai.org][7. Kosztolanyi_prozai.org]]
-- [[8_Mikszath_Kalman_novellisztikaja.org][8. - Mikszath_Kalman_novellisztikaja.org]]
-- [[9_Petofi_hitvesi_kolteszet.org][9. Petofi_hitvesi_kolteszet.org]]
-- [[10_A_nemzeti_tematika_Vorosmarty_eletmuveben.org][10. - A_nemzeti_tematika_Vorosmarty_eletmuveben.org]]
-- [[11_Csokonai_Lilla_versek.org][11. Csokonai_Lilla_versek.org]]
-- [[12_Juhasz_Gyula_liraja.org][12. Juhasz_Gyula_liraja.org]]
-- [[13_Radnoti_Miklos_eklogakolteszete.org][13. - Radnoti_Miklos_eklogakolteszete.org]]
-- [[14_Kanyadi_Sandor_kolteszete.org][14. Kanyadi_Sandor_kolteszete.org]]
-- [[15_Toth_Krisztina_novellisztikaja.org][15. - Toth_Krisztina_novellisztikaja.org]]
-- [[16_A_francia_szimbolista_lira.org][16. A_francia_szimbolista_lira.org]]
-- [[17_Az_orosz_romantika_es_realizmus_hataran-gogol.org][17. - Az_orosz_romantika_es_realizmus_hataran-gogol.org]]
-- [[18_Az_angol_reneszansz_drama.org][18. Az_angol_reneszansz_drama.org]]
-- [[19_Madach_Imre_Az_ember_tragediaja.org][19. - Madach_Imre_Az_ember_tragediaja.org]]
-- [[20_Az_irodalom_hatarteruletei_magyar_nepmesek.org][20. Az_irodalom_hatarteruletei_magyar_nepmesek.org]]
+- [[1_tetel_Ady_Endre_Leda_tetel.org][1. Ady Endre, Léda]]
+- [[2_Arany_Janos_Balladakolteszete.org][2. Arany János Balladaköltészete]]
+- [[3_Babits_Profetai_Kuldetestudat.org][3. Babits Prófétai Küldetéstudata]]
+- [[4_Herczeg_Ferenc_kisepika.org][4. Herczeg Ferenc kisepika]]
+- [[5_Jokai_romantika_realizmus.org][5. Jókai Romantika realizmus]]
+- [[6_Jozsef_Attila_szerelmi_kolteszete.org][6. József Attila szerelmi költészete]]
+- [[7_Kosztolanyi_prozai.org][7. Kosztolányi Dezső prózavilága]]
+- [[8_Mikszath_Kalman_novellisztikaja.org][8. Mikszáth Kálmán novelliszitkája]]
+- [[9_Petofi_hitvesi_kolteszet.org][9. Petőfi hitvesi költészete]]
+- [[10_A_nemzeti_tematika_Vorosmarty_eletmuveben.org][10. A nemzeti tematika Vörösmarty életművében]]
+- [[11_Csokonai_Lilla_versek.org][11. Csokonai: Lilla versek]]
+- [[12_Juhasz_Gyula_liraja.org][12. Juhász Gyula lírája]]
+- [[13_Radnoti_Miklos_eklogakolteszete.org][13. Radnóti Miklós eklogaköltészete]]
+- [[14_Kanyadi_Sandor_kolteszete.org][14. Kányádi Sándor költészete]]
+- [[15_Toth_Krisztina_novellisztikaja.org][15. Tóth Krisztina novellisztikája]]
+- [[16_A_francia_szimbolista_lira.org][16. A francia szimbolista líra]]
+- [[17_Az_orosz_romantika_es_realizmus_hataran-gogol.org][17. Az orosz romantika es realizmus határán, Gogol]]
+- [[18_Az_angol_reneszansz_drama.org][18. Az Angol Reneszánsz Dráma]]
+- [[19_Madach_Imre_Az_ember_tragediaja.org][19. Madách Imre: Az ember tragédiája]]
+- [[20_Az_irodalom_hatarteruletei_magyar_nepmesek.org][20. Az irodalom határterületei, magyar népmesék]]
