--- a/ORG/Irodalom/10_A_nemzeti_tematika_Vorosmarty_eletmuveben.org
+++ b/ORG/Irodalom/10_A_nemzeti_tematika_Vorosmarty_eletmuveben.org
@@ -1,4 +1,4 @@
-#+TITLE: A nemzeti tematika Vörösmarty életművében
+#+TITLE: 10. A nemzeti tematika Vörösmarty életművében
 #+AUTHOR: Gyenes Béla
 #+LANGUAGE: hu
 * Áttekintés
