--- a/ORG/Irodalom/3_Babits_Profetai_Kuldetestudat.org
+++ b/ORG/Irodalom/3_Babits_Profetai_Kuldetestudat.org
@@ -9,23 +9,23 @@
 :PROPERTIES:
 :CUSTOM_ID: a-prófétai-szerepfelfogás-alapjai
 :END:
-Babits a költőt a „látó”, „figyelmeztető” és „tanító” szerepkörében értelmezi. A „próféta” szerepe nála erkölcsi felelősséggel jár: a költő kötelessége megmutatni az igazságot, még akkor is, ha ez fájdalmas. Ez a gondolat szorosan kapcsolódik Babits világnézetéhez: mélyen erkölcsi, humanista alapon álló, a jó és rossz kérdéseit boncolgató szemléletéhez.
+Babits a költőt a „látó”, „figyelmeztető” és „tanító” szerepkörében értelmezi. A „próféta” szerepe nála *erkölcsi felelősséggel jár*: a költő *kötelessége megmutatni az igazságot*, még akkor is, ha ez fájdalmas. Ez a gondolat szorosan kapcsolódik Babits világnézetéhez: mélyen *erkölcsi, humanista alapon álló, a jó és rossz kérdéseit boncolgató szemléletéhez*.
 
 * Tér- és idődimenziók jelentősége
 :PROPERTIES:
 :CUSTOM_ID: tér--és-idődimenziók-jelentősége
 :END:
-- Idő: Babits a költőt „örök időbe” helyezi. Verseiben gyakran jelenik meg a történelmi felelősség, az apokaliptikus jövőképek, például a világháborúk árnyékában. A múlt, jelen és jövő összefonódik, a költő az idő felett álló örök igazságokat hirdeti (pl. Húsvét előtt, Fortissimo).
-- Tér: A próféta Babitsnál nem kötődik konkrét földrajzi helyhez. A költői szó globális érvényű, az emberiséget szólítja meg. Ugyanakkor verseiben gyakran jelennek meg szűkebb terek (pl. börtön, torony), amelyek a lélek szorongását, a bezártságot szimbolizálják (Börtönök, betegek). Ezek a zárt terek a világtól való elszigetelődés és a belső vívódás színterei, de egyben a prófétai látomások forrásai is.
+- Idő: Babits a költőt „örök időbe” helyezi. Verseiben gyakran jelenik meg a *történelmi felelősség*, az apokaliptikus *jövőképek*, például a *világháborúk árnyékában*. Az idő intervallumok *összefonódnak* (*múlt, jelen, jövő*), a költő az idő felett álló *örök igazságokat hirdeti* (pl. Húsvét előtt, Fortissimo).
+- Tér: A próféta Babitsnál nem kötődik konkrét földrajzi helyhez. A költői szó *globális érvényű*, az *emberiséget szólítja meg*. Ugyanakkor verseiben gyakran jelennek meg szűkebb terek (*pl. börtön, torony*), amelyek a *lélek szorongását*, a *bezártságot* szimbolizálják (*Börtönök, betegek*). Ezek a zárt terek a *világtól való elszigetelődés és a belső vívódás színterei*, de egyben a prófétai látomások forrásai is.
 
 * A prófétai szó ereje:
 :PROPERTIES:
 :CUSTOM_ID: a-prófétai-szó-ereje
 :END:
-A költészet Babitsnál nem pusztán művészet, hanem erkölcsi cselekedet. A „próféta szava” egyszerre intés és imádság: figyelmeztet a világ veszélyeire (háború, erkölcsi züllés), de ugyanakkor a hit, a szeretet és a béke hirdetője is. Erre jó példa a Húsvét előtt című vers, amelyben a költő Krisztushoz hasonló prófétai szerepben jelenik meg, a világ bűneit látva kér irgalmat az emberiség számára.
+A költészet Babitsnál nem pusztán művészet, hanem *erkölcsi cselekedet*. A „próféta szava” egyszerre intés és imádság: *figyelmeztet a világ veszélyeire* (*háború, erkölcsi züllés*), de ugyanakkor a *hit*, a *szeretet és a béke hirdetője is*. Erre jó példa a *Húsvét előtt című vers*, amelyben a költő *Krisztushoz hasonló prófétai szerepben jelenik meg*, a világ bűneit látva *kér irgalmat az emberiség számára*.
 
 * Összegzés:
 :PROPERTIES:
 :CUSTOM_ID: összegzés
 :END:
-Babits Mihály prófétai küldetéstudata az idő és tér dimenzióin túlmutatva jelenik meg életművében. A költői szó nála nem csupán esztétikai eszköz, hanem erkölcsi kötelesség, amely az örök emberi kérdéseket feszegeti, figyelmeztetve a jelen és a jövő nemzedékeit a lelkiismeret és a humánum fontosságára.
+Babits Mihály prófétai küldetéstudata az idő és tér dimenzióin túlmutatva jelenik meg életművében. *A költői szó nála nem csupán esztétikai eszköz, hanem erkölcsi kötelesség*, amely az örök emberi kérdéseket feszegeti, figyelmeztetve a *jelen és a jövő nemzedékeit a lelkiismeret és a humánum fontosságára*.
