--- a/ORG/Irodalom/9_Petofi_hitvesi_kolteszet.org
+++ b/ORG/Irodalom/9_Petofi_hitvesi_kolteszet.org
@@ -4,48 +4,48 @@
 #+CATEGORY: hu_irodalom
 * Történelmi és irodalmi háttér
 
-- Időszak: A hitvesi költészet leginkább az 1846--1848 közötti évekre tehető, különösen 1847 után, amikor Petőfi feleségül vette Szendrey Júliát (1847. szeptember 8.).
+- Időszak: A hitvesi költészet leginkább az *1846--1848 közötti évekre tehető*, különösen *1847 után*, amikor Petőfi *feleségül vette Szendrey Júliát* (1847. szeptember 8.).
 
-- Térbeli elhelyezés: Magyarország különböző pontjai, de legfontosabbak: Pest, Koltó (nászút helyszíne), Erdély, Alföld.
+- Térbeli elhelyezés: Magyarország különböző pontjai, de legfontosabbak: *Pest, Koltó* (nászút helyszíne), *Erdély (Fehérvár)*, *Alföld*.
 
-- Irodalmi korszak: A magyar reformkor és a romantika virágzása. Petőfi költészete a romantikus líra sajátosságait követi, de egyéni hangon szólal meg.
+- Irodalmi korszak: A *magyar reformkor és a romantika* virágzása. Petőfi költészete a *romantikus líra sajátosságait követi*, de *egyéni hangon szólal meg*.
 
 * A hitvesi költészet jellemzői
 
-- Téma: A szerelem és házasság boldogsága, a feleséghez fűződő mély, személyes érzelmek. Nem idealizált, hanem valódi, emberi érzéseken alapuló kapcsolat jelenik meg.
+- Téma: A *szerelem és házasság boldogsága*, a feleséghez fűződő mély, személyes érzelmek. Nem idealizált, hanem *valódi, emberi érzéseken alapuló kapcsolat* jelenik meg.
 
-- Hangnem: Személyes, őszinte, olykor játékos, máskor szenvedélyes és megható.
+- Hangnem: *Személyes, őszinte*, olykor játékos, máskor *szenvedélyes és megható*.
 
-- Újdonság: A házastársi szerelem lírai megfogalmazása újszerű volt a magyar irodalomban, hiszen korábban a szerelem költészete gyakran plátói vagy eszményi volt.
+- Újdonság: A házastársi szerelem lírai *megfogalmazása újszerű volt a magyar irodalomban*, hiszen korábban a szerelmi *költészete gyakran plátói vagy eszményi* volt.
 
 * Kiemelkedő művek
 
-- „Szeptember végén” -- talán a legismertebb hitvesi vers, amely egyszerre szól a szerelemről és az elmúlásról.
+- „Szeptember végén” -- talán a *legismertebb hitvesi vers*, amely *egyszerre szól a szerelemről és az elmúlásról*.
 
-- „Reszket a bokor, mert...” -- szerelmes vers Júliához, tele romantikus képekkel.
+- „Reszket a bokor, mert...” -- szerelmes vers Júliához, tele *romantikus képekkel*.
 
-- „Levél Várady Antalhoz” -- epikusabb hangvételű, de a Júlia iránti érzéseket közvetíti.
+- „Levél Várady Antalhoz” -- epikusabb hangvételű, de a J*úlia iránti érzéseket közvetíti*.
 
-- „Költői hitvallás” -- nem közvetlenül hitvesi vers, de a költői szerep és a személyes érzések kapcsolatáról szól.
+- „Költői hitvallás” -- nem közvetlenül hitvesi vers, de a költői szerep és a *személyes érzések kapcsolatáról szól*.
 
 * Petőfi és Szendrey Júlia kapcsolata
 
-- Szenvedélyes, de viharos kapcsolat. Júlia is művelt nő volt, aki verset írt és fordított.
+- *Szenvedélyes*, de *viharos kapcsolat*. Júlia is *művelt nő volt*, aki *verset írt és fordított*.
 
 - Petőfi szerelme mély és őszinte, de erősen féltékeny is volt.
 
-- A költemények gyakran dokumentálják a kapcsolat különböző fázisait: vágyakozás, beteljesülés, aggodalom, boldogság.
+- A költemények gyakran *dokumentálják a kapcsolat különböző fázisait*: *vágyakozás, beteljesülés, aggodalom, boldogság*.
 
 * Stílus és nyelvezet
 
-- Egyszerű, közérthető nyelv, mégis költői képekben gazdag.
+- *Egyszerű, közérthető nyelv*, mégis *költői képekben gazdag*.
 
-- Erős érzelemkifejezés, közvetlen megszólítás (apostrófé), gyakori megszemélyesítések és természetképek.
+- Erős *érzelemkifejezés, közvetlen megszólítás* (apostrófé), gyakori *megszemélyesítések és természetképek*.
 
 * Összegzés
 
-- Petőfi hitvesi költészete új fejezetet nyitott a magyar lírában.
+- Petőfi hitvesi *költészete új fejezetet nyitott a magyar lírában*.
 
-- A házasság és szerelem költői megörökítése őszinte, személyes és időtálló.
+- A *házasság és szerelem költői megörökítése* őszinte, *személyes és időtálló*.
 
-- E versek nemcsak Petőfi érzelmeit, hanem korának eszméit is tükrözik a házasságról, női szerepről és a költői hivatásról.
+- E versek nemcsak Petőfi érzelmeit, hanem *korának eszméit is tükrözik a házasságról*, *női szerepről és a költői hivatásról*.
